@@ -1,31 +1,46 @@
 package wily.legacy.client.controller;
 
 import net.minecraft.client.resources.language.I18n;
+import net.minecraft.network.chat.Component;
 import wily.legacy.Legacy4J;
-import wily.legacy.client.screen.ControlTooltip;
+import wily.legacy.client.ControlType;
+import wily.legacy.client.LegacyTip;
+import wily.legacy.client.screen.LegacyMenuAccess;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+
+import static wily.legacy.client.controller.ControllerManager.CONTROLLER_DETECTED;
+import static wily.legacy.client.controller.ControllerManager.CONTROLLER_DISCONNECTED;
 
 public interface Controller {
 
     String getName();
-    ControlTooltip.Type getType();
+    ControlType getType();
     boolean buttonPressed(int i);
     float axisValue(int i);
     boolean hasLED();
     void setLED(byte r, byte g, byte b);
-    void close();
+    default void connect(ControllerManager manager){
+        if (!manager.isCursorDisabled && manager.minecraft.screen != null) manager.minecraft.execute(()-> manager.minecraft.screen.repositionElements());
+        manager.minecraft.getToasts().addToast(new LegacyTip(CONTROLLER_DETECTED, Component.literal(getName())).disappearTime(4500));
+    }
+    default void disconnect(ControllerManager manager){
+        if (manager.isCursorDisabled && manager.getCursorMode() != 2) manager.enableCursor();
+        manager.updateBindings(Controller.EMPTY);
+        manager.connectedController = null;
+        manager.minecraft.getToasts().addToast(new LegacyTip(CONTROLLER_DISCONNECTED, Component.literal(getName())).disappearTime(4500));
+    }
 
     Controller EMPTY = new Controller() {
         public String getName() {
             return "Empty";
         }
         @Override
-        public ControlTooltip.Type getType() {
-            return ControlTooltip.Type.x360;
+        public ControlType getType() {
+            return ControlType.x360;
         }
         @Override
         public boolean buttonPressed(int i) {
@@ -43,15 +58,18 @@ public interface Controller {
         public void setLED(byte r, byte g, byte b) {
 
         }
-        @Override
-        public void close() {
-
-        }
     };
     interface Handler {
+        Component DOWNLOAD_MESSAGE = Component.translatable("legacy.menu.download_natives_message");
+        Component DOWNLOADING_NATIVES = Component.translatable("legacy.menu.downloading_natives");
+        Component LOADING_NATIVES = Component.translatable("legacy.menu.loading_natives");
+
         String getName();
-        boolean init();
-        void update();
+
+        String getId();
+
+        void init();
+        boolean update();
         void setup(ControllerManager manager);
         Controller getController(int jid);
         boolean isValidController(int jid);
@@ -59,7 +77,7 @@ public interface Controller {
         void applyGamePadMappingsFromBuffer(BufferedReader reader) throws IOException;
         default void tryDownloadAndApplyNewMappings(){
             try {
-                applyGamePadMappingsFromBuffer(new BufferedReader(new InputStreamReader(new URL("https://raw.githubusercontent.com/mdqinc/SDL_GameControllerDB/master/gamecontrollerdb.txt").openStream())));
+                applyGamePadMappingsFromBuffer(new BufferedReader(new InputStreamReader(URI.create("https://raw.githubusercontent.com/mdqinc/SDL_GameControllerDB/master/gamecontrollerdb.txt").toURL().openStream())));
             } catch (IOException e) {
                 Legacy4J.LOGGER.warn(e.getMessage());
             }
@@ -70,11 +88,15 @@ public interface Controller {
                 return I18n.get("options.off");
             }
             @Override
-            public boolean init() {
-                return false;
+            public String getId() {
+                return "none";
             }
             @Override
-            public void update() {
+            public void init() {
+            }
+            @Override
+            public boolean update() {
+                return false;
             }
             @Override
             public void setup(ControllerManager manager) {
@@ -97,11 +119,25 @@ public interface Controller {
         };
     }
     interface Event {
+        Event EMPTY = new Event() {};
+
+        static Event of(Object o){
+            return o instanceof Event e ? e : EMPTY;
+        }
+
         default void controllerTick(Controller controller){
 
         }
         default void bindingStateTick(BindingState state){
 
+        }
+
+        default boolean onceClickBindings(){
+            return true;
+        }
+
+        default boolean disableCursorOnInit(){
+            return !(this instanceof LegacyMenuAccess<?>);
         }
     }
 }
